[package]
authors = ["remolueoend"]
description = "Runs a headless chrome instance to render a particular website and sends a continuous stream of screenshots to a flaschentaschen server."
edition = "2018"
name = "flaschentaschen-web"
version = "0.1.0"
[dependencies]
base64 = "0.13.*"
color-eyre = "0.5.*"
eyre = "0.6.*"
image = "0.23.*"
log = "0.4.*"
loggerv = "0.7.*"
serde_json = "1.0.*"
signal-hook = "0.3.*"

[dependencies.clap]
features = ["derive"]
version = "3.0.*"

[dependencies.headless_chrome]
git = "https://github.com/atroche/rust-headless-chrome"
rev = "fb5604d"
